crates/loadsmith-loader/tests/snapshots/fixtures__BepInEx-BepInExPack_H3VR@5.4.1700.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
BepInExPack_H3VR/BepInEx/config/BepInEx.cfg: "./BepInEx/config/BepInEx.cfg"
BepInExPack_H3VR/BepInEx/core/0Harmony.dll: "./BepInEx/core/0Harmony.dll"
BepInExPack_H3VR/BepInEx/core/0Harmony.xml: "./BepInEx/core/0Harmony.xml"
BepInExPack_H3VR/BepInEx/core/0Harmony20.dll: "./BepInEx/core/0Harmony20.dll"
BepInExPack_H3VR/BepInEx/core/BepInEx.Harmony.dll: "./BepInEx/core/BepInEx.Harmony.dll"
BepInExPack_H3VR/BepInEx/core/BepInEx.Harmony.xml: "./BepInEx/core/BepInEx.Harmony.xml"
BepInExPack_H3VR/BepInEx/core/BepInEx.Preloader.dll: "./BepInEx/core/BepInEx.Preloader.dll"
BepInExPack_H3VR/BepInEx/core/BepInEx.Preloader.xml: "./BepInEx/core/BepInEx.Preloader.xml"
BepInExPack_H3VR/BepInEx/core/BepInEx.dll: "./BepInEx/core/BepInEx.dll"
BepInExPack_H3VR/BepInEx/core/BepInEx.xml: "./BepInEx/core/BepInEx.xml"
BepInExPack_H3VR/BepInEx/core/HarmonyXInterop.dll: "./BepInEx/core/HarmonyXInterop.dll"
BepInExPack_H3VR/BepInEx/core/Mono.Cecil.Mdb.dll: "./BepInEx/core/Mono.Cecil.Mdb.dll"
BepInExPack_H3VR/BepInEx/core/Mono.Cecil.Pdb.dll: "./BepInEx/core/Mono.Cecil.Pdb.dll"
BepInExPack_H3VR/BepInEx/core/Mono.Cecil.Rocks.dll: "./BepInEx/core/Mono.Cecil.Rocks.dll"
BepInExPack_H3VR/BepInEx/core/Mono.Cecil.dll: "./BepInEx/core/Mono.Cecil.dll"
BepInExPack_H3VR/BepInEx/core/MonoMod.RuntimeDetour.dll: "./BepInEx/core/MonoMod.RuntimeDetour.dll"
BepInExPack_H3VR/BepInEx/core/MonoMod.RuntimeDetour.xml: "./BepInEx/core/MonoMod.RuntimeDetour.xml"
BepInExPack_H3VR/BepInEx/core/MonoMod.Utils.dll: "./BepInEx/core/MonoMod.Utils.dll"
BepInExPack_H3VR/BepInEx/core/MonoMod.Utils.xml: "./BepInEx/core/MonoMod.Utils.xml"
BepInExPack_H3VR/doorstop_config.ini: "./doorstop_config.ini"
BepInExPack_H3VR/winhttp.dll: "./winhttp.dll"
README.md: ~
icon.png: ~
manifest.json: ~
