crates/loadsmith-loader/tests/snapshots/fixtures__BepInEx-BepInExPack_ROUNDS@5.4.1901.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
BepInExPack_ROUNDS/BepInEx/config/BepInEx.cfg: "./BepInEx/config/BepInEx.cfg"
BepInExPack_ROUNDS/BepInEx/core/0Harmony.dll: "./BepInEx/core/0Harmony.dll"
BepInExPack_ROUNDS/BepInEx/core/0Harmony.xml: "./BepInEx/core/0Harmony.xml"
BepInExPack_ROUNDS/BepInEx/core/0Harmony20.dll: "./BepInEx/core/0Harmony20.dll"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.Harmony.dll: "./BepInEx/core/BepInEx.Harmony.dll"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.Harmony.xml: "./BepInEx/core/BepInEx.Harmony.xml"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.Preloader.dll: "./BepInEx/core/BepInEx.Preloader.dll"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.Preloader.xml: "./BepInEx/core/BepInEx.Preloader.xml"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.dll: "./BepInEx/core/BepInEx.dll"
BepInExPack_ROUNDS/BepInEx/core/BepInEx.xml: "./BepInEx/core/BepInEx.xml"
BepInExPack_ROUNDS/BepInEx/core/HarmonyXInterop.dll: "./BepInEx/core/HarmonyXInterop.dll"
BepInExPack_ROUNDS/BepInEx/core/Mono.Cecil.Mdb.dll: "./BepInEx/core/Mono.Cecil.Mdb.dll"
BepInExPack_ROUNDS/BepInEx/core/Mono.Cecil.Pdb.dll: "./BepInEx/core/Mono.Cecil.Pdb.dll"
BepInExPack_ROUNDS/BepInEx/core/Mono.Cecil.Rocks.dll: "./BepInEx/core/Mono.Cecil.Rocks.dll"
BepInExPack_ROUNDS/BepInEx/core/Mono.Cecil.dll: "./BepInEx/core/Mono.Cecil.dll"
BepInExPack_ROUNDS/BepInEx/core/MonoMod.RuntimeDetour.dll: "./BepInEx/core/MonoMod.RuntimeDetour.dll"
BepInExPack_ROUNDS/BepInEx/core/MonoMod.RuntimeDetour.xml: "./BepInEx/core/MonoMod.RuntimeDetour.xml"
BepInExPack_ROUNDS/BepInEx/core/MonoMod.Utils.dll: "./BepInEx/core/MonoMod.Utils.dll"
BepInExPack_ROUNDS/BepInEx/core/MonoMod.Utils.xml: "./BepInEx/core/MonoMod.Utils.xml"
BepInExPack_ROUNDS/corlibs/mscorlib.dll: "./corlibs/mscorlib.dll"
BepInExPack_ROUNDS/doorstop_config.ini: "./doorstop_config.ini"
BepInExPack_ROUNDS/winhttp.dll: "./winhttp.dll"
README.md: ~
icon.png: ~
manifest.json: ~
