crates/loadsmith-loader/tests/snapshots/fixtures__BlueberryWolfi-BlueberryWolfiAPIs@1.0.2.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
GDWeave/mods/BlueberryWolfi.APIs/APIs.pck: GDWeave/mods/BlueberryWolfi-BlueberryWolfiAPIs/APIs.pck
GDWeave/mods/BlueberryWolfi.APIs/icon.png: GDWeave/mods/BlueberryWolfi-BlueberryWolfiAPIs/icon.png
GDWeave/mods/BlueberryWolfi.APIs/manifest.json: GDWeave/mods/BlueberryWolfi-BlueberryWolfiAPIs/manifest.json
README.md: ~
icon.png: ~
manifest.json: ~
