crates/loadsmith-loader/tests/snapshots/fixtures__Hell2Modding-Hell2Modding@1.0.105.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
README.md: ~
ReturnOfModdingPack/d3d12.dll: "./d3d12.dll"
icon.png: ~
manifest.json: ~
