crates/loadsmith-loader/tests/snapshots/fixtures__LavaGang-MelonLoader@0.7.3.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
MelonLoader/Dependencies/CompatibilityLayers/Demeo.dll: "./MelonLoader/Dependencies/CompatibilityLayers/Demeo.dll"
MelonLoader/Dependencies/CompatibilityLayers/Demeo.pdb: "./MelonLoader/Dependencies/CompatibilityLayers/Demeo.pdb"
MelonLoader/Dependencies/CompatibilityLayers/IPA.dll: "./MelonLoader/Dependencies/CompatibilityLayers/IPA.dll"
MelonLoader/Dependencies/CompatibilityLayers/IPA.dll.mdb: "./MelonLoader/Dependencies/CompatibilityLayers/IPA.dll.mdb"
MelonLoader/Dependencies/CompatibilityLayers/IPA.pdb: "./MelonLoader/Dependencies/CompatibilityLayers/IPA.pdb"
MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.dll: "./MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.dll"
MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.dll.mdb: "./MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.dll.mdb"
MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.pdb: "./MelonLoader/Dependencies/CompatibilityLayers/Muse_Dash_Mono.pdb"
MelonLoader/Dependencies/CompatibilityLayers/Stress_Level_Zero_Il2Cpp.deps.json: "./MelonLoader/Dependencies/CompatibilityLayers/Stress_Level_Zero_Il2Cpp.deps.json"
MelonLoader/Dependencies/CompatibilityLayers/Stress_Level_Zero_Il2Cpp.dll: "./MelonLoader/Dependencies/CompatibilityLayers/Stress_Level_Zero_Il2Cpp.dll"
MelonLoader/Dependencies/Il2CppAssemblyGenerator/Il2CppAssemblyGenerator.deps.json: "./MelonLoader/Dependencies/Il2CppAssemblyGenerator/Il2CppAssemblyGenerator.deps.json"
MelonLoader/Dependencies/Il2CppAssemblyGenerator/Il2CppAssemblyGenerator.dll: "./MelonLoader/Dependencies/Il2CppAssemblyGenerator/Il2CppAssemblyGenerator.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Buffers.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Buffers.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Collections.Immutable.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Collections.Immutable.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.ComponentModel.Composition.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.ComponentModel.Composition.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Configuration.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Configuration.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Core.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Core.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Data.DataSetExtensions.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Data.DataSetExtensions.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Data.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Data.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Drawing.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Drawing.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.EnterpriseServices.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.EnterpriseServices.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.IO.Compression.FileSystem.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.IO.Compression.FileSystem.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.IO.Compression.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.IO.Compression.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Memory.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Memory.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Net.Http.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Net.Http.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Numerics.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Numerics.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.CompilerServices.Unsafe.6.0.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.CompilerServices.Unsafe.6.0.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.CompilerServices.Unsafe.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.CompilerServices.Unsafe.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.Serialization.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.Serialization.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Runtime.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Security.Cryptography.Cng.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Security.Cryptography.Cng.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Security.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Security.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.ServiceModel.Internals.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.ServiceModel.Internals.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Transactions.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Transactions.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Xml.Linq.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Xml.Linq.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Xml.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.Xml.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/System.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/System.dll"
MelonLoader/Dependencies/MonoBleedingEdgePatches/mscorlib.dll: "./MelonLoader/Dependencies/MonoBleedingEdgePatches/mscorlib.dll"
MelonLoader/Dependencies/NetStandardPatches/System.Configuration.dll: "./MelonLoader/Dependencies/NetStandardPatches/System.Configuration.dll"
MelonLoader/Dependencies/NetStandardPatches/System.Core.dll: "./MelonLoader/Dependencies/NetStandardPatches/System.Core.dll"
MelonLoader/Dependencies/NetStandardPatches/System.Xml.dll: "./MelonLoader/Dependencies/NetStandardPatches/System.Xml.dll"
MelonLoader/Dependencies/NetStandardPatches/System.dll: "./MelonLoader/Dependencies/NetStandardPatches/System.dll"
MelonLoader/Dependencies/SupportModules/Il2Cpp.deps.json: "./MelonLoader/Dependencies/SupportModules/Il2Cpp.deps.json"
MelonLoader/Dependencies/SupportModules/Il2Cpp.dll: "./MelonLoader/Dependencies/SupportModules/Il2Cpp.dll"
MelonLoader/Dependencies/SupportModules/Mono.dll: "./MelonLoader/Dependencies/SupportModules/Mono.dll"
MelonLoader/Dependencies/SupportModules/Mono.dll.mdb: "./MelonLoader/Dependencies/SupportModules/Mono.dll.mdb"
MelonLoader/Dependencies/SupportModules/Mono.pdb: "./MelonLoader/Dependencies/SupportModules/Mono.pdb"
MelonLoader/Documentation/CHANGELOG.md: "./MelonLoader/Documentation/CHANGELOG.md"
MelonLoader/Documentation/LICENSE.md: "./MelonLoader/Documentation/LICENSE.md"
MelonLoader/Documentation/NOTICE.txt: "./MelonLoader/Documentation/NOTICE.txt"
MelonLoader/Documentation/README.md: "./MelonLoader/Documentation/README.md"
MelonLoader/net35/0Harmony.dll: "./MelonLoader/net35/0Harmony.dll"
MelonLoader/net35/AsmResolver.DotNet.dll: "./MelonLoader/net35/AsmResolver.DotNet.dll"
MelonLoader/net35/AsmResolver.PE.File.dll: "./MelonLoader/net35/AsmResolver.PE.File.dll"
MelonLoader/net35/AsmResolver.PE.dll: "./MelonLoader/net35/AsmResolver.PE.dll"
MelonLoader/net35/AsmResolver.dll: "./MelonLoader/net35/AsmResolver.dll"
MelonLoader/net35/AssetRipper.Primitives.dll: "./MelonLoader/net35/AssetRipper.Primitives.dll"
MelonLoader/net35/AssetsTools.NET.dll: "./MelonLoader/net35/AssetsTools.NET.dll"
MelonLoader/net35/IndexRange.dll: "./MelonLoader/net35/IndexRange.dll"
MelonLoader/net35/MelonLoader.dll: "./MelonLoader/net35/MelonLoader.dll"
MelonLoader/net35/MelonLoader.dll.mdb: "./MelonLoader/net35/MelonLoader.dll.mdb"
MelonLoader/net35/MelonLoader.pdb: "./MelonLoader/net35/MelonLoader.pdb"
MelonLoader/net35/MelonLoader.xml: "./MelonLoader/net35/MelonLoader.xml"
MelonLoader/net35/Mono.Cecil.Mdb.dll: "./MelonLoader/net35/Mono.Cecil.Mdb.dll"
MelonLoader/net35/Mono.Cecil.Pdb.dll: "./MelonLoader/net35/Mono.Cecil.Pdb.dll"
MelonLoader/net35/Mono.Cecil.Rocks.dll: "./MelonLoader/net35/Mono.Cecil.Rocks.dll"
MelonLoader/net35/Mono.Cecil.dll: "./MelonLoader/net35/Mono.Cecil.dll"
MelonLoader/net35/MonoMod.Backports.dll: "./MelonLoader/net35/MonoMod.Backports.dll"
MelonLoader/net35/MonoMod.ILHelpers.dll: "./MelonLoader/net35/MonoMod.ILHelpers.dll"
MelonLoader/net35/MonoMod.RuntimeDetour.dll: "./MelonLoader/net35/MonoMod.RuntimeDetour.dll"
MelonLoader/net35/MonoMod.Utils.dll: "./MelonLoader/net35/MonoMod.Utils.dll"
MelonLoader/net35/MonoMod.exe: "./MelonLoader/net35/MonoMod.exe"
MelonLoader/net35/Newtonsoft.Json.dll: "./MelonLoader/net35/Newtonsoft.Json.dll"
MelonLoader/net35/Tomlet.dll: "./MelonLoader/net35/Tomlet.dll"
MelonLoader/net35/ValueTupleBridge.dll: "./MelonLoader/net35/ValueTupleBridge.dll"
MelonLoader/net35/WebSocketDotNet.dll: "./MelonLoader/net35/WebSocketDotNet.dll"
MelonLoader/net35/bHapticsLib.dll: "./MelonLoader/net35/bHapticsLib.dll"
MelonLoader/net472/0Harmony.dll: "./MelonLoader/net472/0Harmony.dll"
MelonLoader/net472/AsmResolver.DotNet.dll: "./MelonLoader/net472/AsmResolver.DotNet.dll"
MelonLoader/net472/AsmResolver.PE.File.dll: "./MelonLoader/net472/AsmResolver.PE.File.dll"
MelonLoader/net472/AsmResolver.PE.dll: "./MelonLoader/net472/AsmResolver.PE.dll"
MelonLoader/net472/AsmResolver.dll: "./MelonLoader/net472/AsmResolver.dll"
MelonLoader/net472/AssetRipper.Primitives.dll: "./MelonLoader/net472/AssetRipper.Primitives.dll"
MelonLoader/net472/AssetsTools.NET.dll: "./MelonLoader/net472/AssetsTools.NET.dll"
MelonLoader/net472/IndexRange.dll: "./MelonLoader/net472/IndexRange.dll"
MelonLoader/net472/MelonLoader.dll: "./MelonLoader/net472/MelonLoader.dll"
MelonLoader/net472/MelonLoader.pdb: "./MelonLoader/net472/MelonLoader.pdb"
MelonLoader/net472/MelonLoader.xml: "./MelonLoader/net472/MelonLoader.xml"
MelonLoader/net472/Microsoft.Bcl.HashCode.dll: "./MelonLoader/net472/Microsoft.Bcl.HashCode.dll"
MelonLoader/net472/Mono.Cecil.Mdb.dll: "./MelonLoader/net472/Mono.Cecil.Mdb.dll"
MelonLoader/net472/Mono.Cecil.Pdb.dll: "./MelonLoader/net472/Mono.Cecil.Pdb.dll"
MelonLoader/net472/Mono.Cecil.Rocks.dll: "./MelonLoader/net472/Mono.Cecil.Rocks.dll"
MelonLoader/net472/Mono.Cecil.dll: "./MelonLoader/net472/Mono.Cecil.dll"
MelonLoader/net472/MonoMod.Backports.dll: "./MelonLoader/net472/MonoMod.Backports.dll"
MelonLoader/net472/MonoMod.ILHelpers.dll: "./MelonLoader/net472/MonoMod.ILHelpers.dll"
MelonLoader/net472/MonoMod.RuntimeDetour.dll: "./MelonLoader/net472/MonoMod.RuntimeDetour.dll"
MelonLoader/net472/MonoMod.Utils.dll: "./MelonLoader/net472/MonoMod.Utils.dll"
MelonLoader/net472/MonoMod.exe: "./MelonLoader/net472/MonoMod.exe"
MelonLoader/net472/Newtonsoft.Json.dll: "./MelonLoader/net472/Newtonsoft.Json.dll"
MelonLoader/net472/System.Buffers.dll: "./MelonLoader/net472/System.Buffers.dll"
MelonLoader/net472/System.Memory.dll: "./MelonLoader/net472/System.Memory.dll"
MelonLoader/net472/System.Numerics.Vectors.dll: "./MelonLoader/net472/System.Numerics.Vectors.dll"
MelonLoader/net472/System.Runtime.CompilerServices.Unsafe.dll: "./MelonLoader/net472/System.Runtime.CompilerServices.Unsafe.dll"
MelonLoader/net472/System.ValueTuple.dll: "./MelonLoader/net472/System.ValueTuple.dll"
MelonLoader/net472/Tomlet.dll: "./MelonLoader/net472/Tomlet.dll"
MelonLoader/net472/WebSocketDotNet.dll: "./MelonLoader/net472/WebSocketDotNet.dll"
MelonLoader/net472/bHapticsLib.dll: "./MelonLoader/net472/bHapticsLib.dll"
MelonLoader/net6/0Harmony.dll: "./MelonLoader/net6/0Harmony.dll"
MelonLoader/net6/AsmResolver.DotNet.dll: "./MelonLoader/net6/AsmResolver.DotNet.dll"
MelonLoader/net6/AsmResolver.PE.File.dll: "./MelonLoader/net6/AsmResolver.PE.File.dll"
MelonLoader/net6/AsmResolver.PE.dll: "./MelonLoader/net6/AsmResolver.PE.dll"
MelonLoader/net6/AsmResolver.dll: "./MelonLoader/net6/AsmResolver.dll"
MelonLoader/net6/AssetRipper.Primitives.dll: "./MelonLoader/net6/AssetRipper.Primitives.dll"
MelonLoader/net6/AssetsTools.NET.dll: "./MelonLoader/net6/AssetsTools.NET.dll"
MelonLoader/net6/Iced.dll: "./MelonLoader/net6/Iced.dll"
MelonLoader/net6/Il2CppInterop.Common.dll: "./MelonLoader/net6/Il2CppInterop.Common.dll"
MelonLoader/net6/Il2CppInterop.Generator.dll: "./MelonLoader/net6/Il2CppInterop.Generator.dll"
MelonLoader/net6/Il2CppInterop.HarmonySupport.dll: "./MelonLoader/net6/Il2CppInterop.HarmonySupport.dll"
MelonLoader/net6/Il2CppInterop.Runtime.dll: "./MelonLoader/net6/Il2CppInterop.Runtime.dll"
MelonLoader/net6/IndexRange.dll: "./MelonLoader/net6/IndexRange.dll"
MelonLoader/net6/MelonLoader.NativeHost.deps.json: "./MelonLoader/net6/MelonLoader.NativeHost.deps.json"
MelonLoader/net6/MelonLoader.NativeHost.dll: "./MelonLoader/net6/MelonLoader.NativeHost.dll"
MelonLoader/net6/MelonLoader.deps.json: "./MelonLoader/net6/MelonLoader.deps.json"
MelonLoader/net6/MelonLoader.dll: "./MelonLoader/net6/MelonLoader.dll"
MelonLoader/net6/MelonLoader.pdb: "./MelonLoader/net6/MelonLoader.pdb"
MelonLoader/net6/MelonLoader.runtimeconfig.json: "./MelonLoader/net6/MelonLoader.runtimeconfig.json"
MelonLoader/net6/MelonLoader.xml: "./MelonLoader/net6/MelonLoader.xml"
MelonLoader/net6/Microsoft.Bcl.AsyncInterfaces.dll: "./MelonLoader/net6/Microsoft.Bcl.AsyncInterfaces.dll"
MelonLoader/net6/Microsoft.Bcl.Memory.dll: "./MelonLoader/net6/Microsoft.Bcl.Memory.dll"
MelonLoader/net6/Microsoft.Diagnostics.NETCore.Client.dll: "./MelonLoader/net6/Microsoft.Diagnostics.NETCore.Client.dll"
MelonLoader/net6/Microsoft.Diagnostics.Runtime.dll: "./MelonLoader/net6/Microsoft.Diagnostics.Runtime.dll"
MelonLoader/net6/Microsoft.Extensions.Configuration.Abstractions.dll: "./MelonLoader/net6/Microsoft.Extensions.Configuration.Abstractions.dll"
MelonLoader/net6/Microsoft.Extensions.Configuration.dll: "./MelonLoader/net6/Microsoft.Extensions.Configuration.dll"
MelonLoader/net6/Microsoft.Extensions.DependencyInjection.Abstractions.dll: "./MelonLoader/net6/Microsoft.Extensions.DependencyInjection.Abstractions.dll"
MelonLoader/net6/Microsoft.Extensions.DependencyInjection.dll: "./MelonLoader/net6/Microsoft.Extensions.DependencyInjection.dll"
MelonLoader/net6/Microsoft.Extensions.Logging.Abstractions.dll: "./MelonLoader/net6/Microsoft.Extensions.Logging.Abstractions.dll"
MelonLoader/net6/Microsoft.Extensions.Logging.dll: "./MelonLoader/net6/Microsoft.Extensions.Logging.dll"
MelonLoader/net6/Microsoft.Extensions.Options.dll: "./MelonLoader/net6/Microsoft.Extensions.Options.dll"
MelonLoader/net6/Microsoft.Extensions.Primitives.dll: "./MelonLoader/net6/Microsoft.Extensions.Primitives.dll"
MelonLoader/net6/Mono.Cecil.Mdb.dll: "./MelonLoader/net6/Mono.Cecil.Mdb.dll"
MelonLoader/net6/Mono.Cecil.Pdb.dll: "./MelonLoader/net6/Mono.Cecil.Pdb.dll"
MelonLoader/net6/Mono.Cecil.Rocks.dll: "./MelonLoader/net6/Mono.Cecil.Rocks.dll"
MelonLoader/net6/Mono.Cecil.dll: "./MelonLoader/net6/Mono.Cecil.dll"
MelonLoader/net6/MonoMod.Backports.dll: "./MelonLoader/net6/MonoMod.Backports.dll"
MelonLoader/net6/MonoMod.ILHelpers.dll: "./MelonLoader/net6/MonoMod.ILHelpers.dll"
MelonLoader/net6/MonoMod.RuntimeDetour.dll: "./MelonLoader/net6/MonoMod.RuntimeDetour.dll"
MelonLoader/net6/MonoMod.Utils.dll: "./MelonLoader/net6/MonoMod.Utils.dll"
MelonLoader/net6/MonoMod.dll: "./MelonLoader/net6/MonoMod.dll"
MelonLoader/net6/Newtonsoft.Json.dll: "./MelonLoader/net6/Newtonsoft.Json.dll"
MelonLoader/net6/System.Configuration.ConfigurationManager.dll: "./MelonLoader/net6/System.Configuration.ConfigurationManager.dll"
MelonLoader/net6/System.Diagnostics.DiagnosticSource.dll: "./MelonLoader/net6/System.Diagnostics.DiagnosticSource.dll"
MelonLoader/net6/System.Runtime.CompilerServices.Unsafe.dll: "./MelonLoader/net6/System.Runtime.CompilerServices.Unsafe.dll"
MelonLoader/net6/System.Security.Cryptography.ProtectedData.dll: "./MelonLoader/net6/System.Security.Cryptography.ProtectedData.dll"
MelonLoader/net6/System.Security.Permissions.dll: "./MelonLoader/net6/System.Security.Permissions.dll"
MelonLoader/net6/Tomlet.dll: "./MelonLoader/net6/Tomlet.dll"
MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.deps.json: "./MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.deps.json"
MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.dll: "./MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.dll"
MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.pdb: "./MelonLoader/net6/UnityEngine.Il2CppAssetBundleManager.pdb"
MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.deps.json: "./MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.deps.json"
MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.dll: "./MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.dll"
MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.pdb: "./MelonLoader/net6/UnityEngine.Il2CppImageConversionManager.pdb"
MelonLoader/net6/WebSocketDotNet.dll: "./MelonLoader/net6/WebSocketDotNet.dll"
MelonLoader/net6/bHapticsLib.dll: "./MelonLoader/net6/bHapticsLib.dll"
README.md: ~
icon.png: ~
manifest.json: ~
version.dll: "./version.dll"
